tests/snapshots/examples_fixtures/diagnostics_demos__suggestions__global_scope.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics_demos/suggestions/global_scope.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
