tests/snapshots/examples_fixtures/diagnostics_demos__suggestions__prefix_match.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics_demos/suggestions/prefix_match.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
