tests/snapshots/examples_fixtures/diagnostics_demos__suggestions__scoped_variables.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics_demos/suggestions/scoped_variables.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
