tests/snapshots/examples_fixtures/diagnostics_demos__suggestions__simple_typo.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics_demos/suggestions/simple_typo.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
