tests/snapshots/examples_fixtures/diagnostics_demos__suggestions__test_suggestions.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics_demos/suggestions/test_suggestions.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
